Object Disappears if it has Shape Keys on Mesh Data with multiple users #38504

Closed
opened 2014-02-05 18:41:35 +01:00 by Daniel Houghton · 10 comments

System Information
MacBook Pro
15-inch, Early 2011
2 GHz Intel Core i7
8 GB 1333 MHz DDR3
AMD Radeon HD 6490M 256 MB
OS X 10.8.5 (12F45)

Blender Version
Broken: 2.69.0 r60991
Worked: unknown

Short description of error
Certain objects that draw just fine in wireframe, and solid shaded mode are disappearing in Cycles Rendered viewport shading mode.
These objects show up just fine if an actual image is rendered in Cycles.
It seems to only happen with a combination of 3 things that happen to be quite useful for a character that I'm rigging.

  1. multiple objects share the same mesh data
  2. each object has a displace modifier
  3. the mesh data has a shape key

This combination will cause all duplicates except for the last created to disappear in Rendered shading mode.

Exact steps for others to reproduce the error
shape_key_shared_mesh_bug.blend
Open the attached .blend file and switch back and forth between solid shaded mode and rendered shading mode.
The bottom two planes should disappear.
Render the image and all 3 planes will appear.

Thank you for looking at this!
Daniel

**System Information** MacBook Pro 15-inch, Early 2011 2 GHz Intel Core i7 8 GB 1333 MHz DDR3 AMD Radeon HD 6490M 256 MB OS X 10.8.5 (12F45) **Blender Version** Broken: 2.69.0 r60991 Worked: unknown **Short description of error** Certain objects that draw just fine in wireframe, and solid shaded mode are disappearing in Cycles Rendered viewport shading mode. These objects show up just fine if an actual image is rendered in Cycles. It seems to only happen with a combination of 3 things that happen to be quite useful for a character that I'm rigging. 1) multiple objects share the same mesh data 2) each object has a displace modifier 3) the mesh data has a shape key This combination will cause all duplicates except for the last created to disappear in Rendered shading mode. **Exact steps for others to reproduce the error** [shape_key_shared_mesh_bug.blend](https://archive.blender.org/developer/F76116/shape_key_shared_mesh_bug.blend) Open the attached .blend file and switch back and forth between solid shaded mode and rendered shading mode. The bottom two planes should disappear. Render the image and all 3 planes will appear. Thank you for looking at this! Daniel
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @DanielHoughton

Added subscriber: @DanielHoughton
Sergey Sharybin self-assigned this 2014-02-06 08:34:49 +01:00

Will look into it.

Will look into it.
Sergey Sharybin removed their assignment 2014-02-14 09:46:27 +01:00
Brecht Van Lommel was assigned by Sergey Sharybin 2014-02-14 09:46:27 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Nothing to do with the blender side, purely failure of Cycles' hashing.

Nothing to do with the blender side, purely failure of Cycles' hashing.

This issue was referenced by blender/blender-addons-contrib@8439a165ff

This issue was referenced by blender/blender-addons-contrib@8439a165ff50a6b3f690c04347aae8a253e08ca2

This issue was referenced by 8439a165ff

This issue was referenced by 8439a165ff50a6b3f690c04347aae8a253e08ca2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8439a165ff.

Closed by commit 8439a165ff.

Fixed now, thanks for the report.

Fixed now, thanks for the report.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38504
No description provided.