Fix T38504: cycles missing object in viewport with shape keys and shared mesh.